@@ -26,6 +26,13 @@ persistent with a session already.
 - unit-of-work does a better check for "orphaned" objects that are
 part of a "delete-orphan" cascade, for certain conditions where the 
 parent isnt available to cascade from.
+- mappers can tell if one of their objects is an "orphan" based
+on interactions with the attribute package. this check is based
+on a status flag maintained for each relationship 
+when objects are attached and detached from each other.  if the
+status flag is not present, its assumed to be "False" for a 
+transient instance and assumed to be "True" for a persisted/detached
+ instance.
 - it is now invalid to declare a self-referential relationship with
 "delete-orphan" (as the abovementioned check would make them impossible
 to save)
